--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,5 +34,5 @@ jobs:
      uses: peaceiris/actions-gh-pages@v3
      if: github.ref == 'refs/heads/master'
      with:
-       github_token: ${{ secrets.GITHUB_TOKEN }}
+       github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
        publish_dir: ./dist
